Fix issue of not able to export UUID plugin jar.